--- a/oba-cytomer/pom.xml
+++ b/oba-cytomer/pom.xml
@@ -2,14 +2,14 @@
 	<parent>
 		<groupId>de.sybig</groupId>
 		<artifactId>oba</artifactId>
-		<version>1.0</version>
+		<version>1.1</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>de.sybig</groupId>
 	<artifactId>oba-cytomer</artifactId>
-	<version>1.0</version>
+	<version>1.1</version>
 	<packaging>jar</packaging>
 
 	<name>oba cytomer</name>
@@ -22,7 +22,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
-				<version>1.2</version>
+				<version>${plugin.shade.version}</version>
 				<executions>
 					<execution>
 						<phase>package</phase>
@@ -30,7 +30,7 @@
 							<goal>shade</goal>
 						</goals>
 						<configuration>
-						<finalName>${project.artifactId}-with-dependencies-${project.version}</finalName>
+							<finalName>${project.artifactId}-with-dependencies-${project.version}</finalName>
 							<artifactSet>
 								<excludes>
 									<exclude>junit:junit</exclude>
@@ -41,8 +41,8 @@
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<manifestEntries>
 										<Main-Class>de.sybig.oba.client.SimpleClient</Main-Class>
-										</manifestEntries>
-									</transformer>
+									</manifestEntries>
+								</transformer>
 							</transformers>
 
 						</configuration>
@@ -54,16 +54,16 @@
 	</build>
 
 	<dependencies>
-	
+
 		<dependency>
 			<groupId>de.sybig</groupId>
 			<artifactId>oba-common</artifactId>
-			<version>1.0</version>
+			<version>1.1</version>
 		</dependency>
 		<dependency>
 			<groupId>de.sybig</groupId>
 			<artifactId>oba-client</artifactId>
-			<version>1.0</version>
+			<version>1.1</version>
 		</dependency>
 	</dependencies>
 </project>
