--- a/oba-server/src/main/resources/dev/cytomer.properties
+++ b/oba-server/src/main/resources/dev/cytomer.properties
@@ -1,6 +1,8 @@
 organ_name=organ
 organ_ns=http://protege.stanford.edu/plugins/owl/protege
 organ_restrictions=isPartOf, isCellOf, isPartOfOrgan
+physiological_system_name=physiological_system
+physiological_system_ns=http://protege.stanford.edu/plugins/owl/protege
 set_upstream_restrictions=isPartOf, isCellOf, isPartOfOrgan
 set_downstream_restrictions=hasPart, hasCell, hasOrganPart
 
