--- a/oba-server/src/main/resources/dev/log4j.properties
+++ b/oba-server/src/main/resources/dev/log4j.properties
@@ -2,7 +2,7 @@
 /*
 #set the level of the root logger to DEBUG and set its appender
 #as an appender named X
-log4j.rootLogger = DEBUG, X
+log4j.rootLogger = DEBUG, CONSOLE, FILE
 
 #set the appender named X to be a console appender
 log4j.appender.X=org.apache.log4j.ConsoleAppender
@@ -10,9 +10,6 @@ log4j.appender.X=org.apache.log4j.ConsoleAppender
 #set the layout for the appender X
 log4j.appender.X.layout=org.apache.log4j.PatternLayout
 log4j.appender.X.layout.conversionPattern=%m%n
-
-# define the root logger with two appenders writing to console and file
-log4j.rootLogger = DEBUG, CONSOLE, FILE
 
 #define your own logger named com.foo
 log4j.logger.com.foo=com.foo.MyLogger
@@ -26,4 +23,5 @@ log4j.appender.FILE.File=/tmp/oba.out
 
 #define the appender named CONSOLE
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
-log4j.appender.CONSOLE.conversionPattern=%m%n
+log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
+log4j.appender.CONSOLE.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
