--- a/oba-common/pom.xml
+++ b/oba-common/pom.xml
@@ -2,14 +2,14 @@
 	<parent>
 		<groupId>de.sybig</groupId>
 		<artifactId>oba</artifactId>
-		<version>1.1</version>
+		<version>1.2</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>de.sybig</groupId>
 	<artifactId>oba-common</artifactId>
-	<version>1.1</version>
+	<version>1.2</version>
 	<packaging>jar</packaging>
 
 	<name>oba common</name>
@@ -33,4 +33,17 @@
 			</plugin>
 		</plugins>
 	</build>
+	<dependencies>
+  <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.0</version>
+        </dependency>
+        <dependency>
+  <groupId>org.codehaus.jackson</groupId>
+  <artifactId>jackson-core-asl</artifactId>
+  <version>1.9.0</version>
+</dependency>
+
+</dependencies>
 </project>
