--- a/oba-tribolium/pom.xml
+++ b/oba-tribolium/pom.xml
@@ -1,4 +1,3 @@
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>de.sybig</groupId>
@@ -9,17 +8,17 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>de.sybig</groupId>
-    <artifactId>oba-cytomer</artifactId>
+    <artifactId>oba-tribolium</artifactId>
     <version>1.2</version>
     <packaging>jar</packaging>
 
-    <name>oba cytomer</name>
+    <name>oba tribolium</name>
     <build>
         <plugins>
-			<!-- <plugin> <artifactId>maven-assembly-plugin</artifactId> <version>2.2-beta-5</version> 
-				<configuration> <descriptorRefs> <descriptorRef>jar-with-dependencies</descriptorRef> 
-				</descriptorRefs> <archive> <manifest> <mainClass>de.sybig.oba.client.SimpleClient</mainClass> 
-				</manifest> </archive> </configuration> </plugin> -->
+            <!-- <plugin> <artifactId>maven-assembly-plugin</artifactId> <version>2.2-beta-5</version>
+                   <configuration> <descriptorRefs> <descriptorRef>jar-with-dependencies</descriptorRef>
+                   </descriptorRefs> <archive> <manifest> <mainClass>de.sybig.oba.client.SimpleClient</mainClass>
+                   </manifest> </archive> </configuration> </plugin> -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -40,9 +39,6 @@
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <manifestEntries>
-                                        <Main-Class>de.sybig.oba.client.SimpleClient</Main-Class>
-                                    </manifestEntries>
                                 </transformer>
                             </transformers>
 
@@ -61,8 +57,8 @@
                             <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                         </manifest>
                         <manifestEntries>
-                            <function-path-name>cytomer</function-path-name>
-                            <function-main-class>de.sybig.oba.server.CytomerFunctions</function-main-class>
+                            <function-path-name>tribolium</function-path-name>
+                            <function-main-class>de.sybig.oba.server.tribolium.TriboliumFunctions</function-main-class>
                         </manifestEntries>
                     </archive>
                 </configuration>
@@ -72,7 +68,12 @@
     </build>
 
     <dependencies>
-
+        <dependency>
+            <groupId>owlapi</groupId>
+            <artifactId>owlapi-parent</artifactId>
+            <version>3.0.0</version>
+    <!--        <scope>compile</scope> -->
+        </dependency>
         <dependency>
             <groupId>de.sybig</groupId>
             <artifactId>oba-common</artifactId>
