--- a/oba-cytomer/src/main/resources/cytomer.properties
+++ b/oba-cytomer/src/main/resources/cytomer.properties
@@ -1,6 +1,9 @@
+# default cytomer properties
 organ_name=organ
-organ_ns=http://protege.stanford.edu/plugins/owl/protege
+#organ_ns=http://protege.stanford.edu/plugins/owl/protege
 organ_restrictions=isPartOf, isCellOf, isPartOfOrgan
 set_upstream_restrictions=isPartOf, isCellOf, isPartOfOrgan
 set_downstream_restrictions=hasPart, hasCell, hasOrganPart
 
+organ_ns=http://cytomer.bioinf.med.uni-goettingen.de
+physiological_system_ns=http://cytomer.bioinf.med.uni-goettingen.de
