--- a/oba-cytomer/src/main/resources/dev/cytomer.properties
+++ b/oba-cytomer/src/main/resources/dev/cytomer.properties
@@ -1,8 +1,11 @@
+# dev cytomer properties
 organ_name=organ
-organ_ns=http://protege.stanford.edu/plugins/owl/protege
+#organ_ns=http://protege.stanford.edu/plugins/owl/protege
+organ_ns=http://cytomer.bioinf.med.uni-goettingen.de
 organ_restrictions=isPartOf, isCellOf, isPartOfOrgan
 physiological_system_name=physiological_system
-physiological_system_ns=http://protege.stanford.edu/plugins/owl/protege
+#physiological_system_ns=http://protege.stanford.edu/plugins/owl/protege
+physiological_system_ns=http://cytomer.bioinf.med.uni-goettingen.de
 set_upstream_restrictions=isPartOf, isCellOf, isPartOfOrgan
 set_downstream_restrictions=hasPart, hasCell, hasOrganPart
 
