--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>de.sybig</groupId>
     <artifactId>oba</artifactId>
-    <version>1.2.1</version>
+    <version>1.3</version>
     <packaging>pom</packaging>
 
     <name>oba</name>
@@ -13,14 +13,14 @@
 
     <properties>
 				
-<!--		<jersey.version>1.8-ea02</jersey.version>-->
-        <jersey.version>1.1.4</jersey.version>
+		<jersey.version>1.9.1</jersey.version>
+        <!--<jersey.version>1.1.4</jersey.version>-->
         <plugin.shade.version>1.4</plugin.shade.version>
         <slf4j.version>1.5.8</slf4j.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<!-- the following is needed for the PMD plugin, it ignores it own config 
 			values -->
-        <targetJdk>1.6</targetJdk>
+        <targetJdk>1.5</targetJdk>
     </properties>
     <profiles>
         <profile>
@@ -64,8 +64,8 @@
         </developer>
     </developers>
     <scm>
-        <connection>scm:svn:https://svn.bioinf.med.uni-goettingen.de/svn/oba/tags/oba-1.2.1</connection>
-        <developerConnection>scm:svn:https://svn.bioinf.med.uni-goettingen.de/svn/oba/tags/oba-1.2.1</developerConnection>
+        <connection>scm:svn:https://svn.bioinf.med.uni-goettingen.de/svn/oba/tags/oba-1.3</connection>
+        <developerConnection>scm:svn:https://svn.bioinf.med.uni-goettingen.de/svn/oba/tags/oba-1.3</developerConnection>
     </scm>
 
     <distributionManagement>
@@ -145,8 +145,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.1</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.5</source>
+                    <target>1.5</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -219,7 +219,7 @@
                 <version>2.5</version>
                 <configuration>
                     <configuration>
-                        <targetJdk>1.6</targetJdk>
+                        <targetJdk>1.5</targetJdk>
                     </configuration>
                 </configuration>
             </plugin>
@@ -245,8 +245,6 @@
     </reporting>
 
     <dependencies>
-		<!-- <dependency> <groupId>log4j</groupId> <artifactId>log4j</artifactId> 
-			<version>1.2.12</version> </dependency> -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
