--- a/oba-common/pom.xml
+++ b/oba-common/pom.xml
@@ -2,14 +2,14 @@
 	<parent>
 		<groupId>de.sybig</groupId>
 		<artifactId>oba</artifactId>
-		<version>1.3</version>
+		<version>1.4-SNAPSHOT</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>de.sybig</groupId>
 	<artifactId>oba-common</artifactId>
-	<version>1.3</version>
+	<version>1.4-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>oba common</name>
