--- a/oba-tribolium/pom.xml
+++ b/oba-tribolium/pom.xml
@@ -68,12 +68,11 @@
     </build>
 
     <dependencies>
-        <dependency>
+        <!--<dependency>
             <groupId>owlapi</groupId>
             <artifactId>owlapi-parent</artifactId>
             <version>3.0.0</version>
-    <!--        <scope>compile</scope> -->
-        </dependency>
+        </dependency> -->
         <dependency>
             <groupId>de.sybig</groupId>
             <artifactId>oba-common</artifactId>
