--- a/oba-server/pom.xml
+++ b/oba-server/pom.xml
@@ -104,26 +104,24 @@
                 </executions>
             </plugin>
             <!-- <plugin> <artifactId>maven-assembly-plugin</artifactId> <version>2.2-beta-5</version>
-                   <configuration> <descriptorRefs> <descriptorRef>jar-with-dependencies</descriptorRef>
-                   </descriptorRefs> <archive> <manifest> <mainClass>de.sybig.oba.server.RestServer</mainClass>
-                   </manifest> </archive> </configuration> </plugin> -->
+            <configuration> <descriptorRefs> <descriptorRef>jar-with-dependencies</descriptorRef>
+            </descriptorRefs> <archive> <manifest> <mainClass>de.sybig.oba.server.RestServer</mainClass>
+            </manifest> </archive> </configuration> </plugin> -->
         </plugins>
     </build>
     <dependencies>
-	<!--
+	
         <dependency>
             <groupId>owlapi</groupId>
             <artifactId>owlapi-parent</artifactId>
             <version>3.0.0</version>
         </dependency>
-	-->
-<dependency>
-    <groupId>owlapi</groupId>
-    <artifactId>owlapi-parent</artifactId>
-    <version>3.0.0</version>
-    <scope>system</scope>
-    <systemPath>${project.basedir}/src/main/resources/owlapi-parent-3.0.0.jar</systemPath>
-</dependency>
+	
+        <dependency>
+            <groupId>owlapi</groupId>
+            <artifactId>owlapi-parent</artifactId>
+            <version>3.0.0</version>
+        </dependency>
         <dependency>
             <groupId>de.sybig</groupId>
             <artifactId>oba-common</artifactId>
@@ -171,4 +169,12 @@
             <version>1.8.0.10</version>
         </dependency>
     </dependencies>
+    <repositories>
+      <repository>
+          <id>local-project-libraries</id>
+          <name>Local project libraries</name>
+          <url>file://${project.basedir}/lib</url>
+          <layout>default</layout>
+      </repository>
+ </repositories>
 </project>
