--- a/oba/pom.xml
+++ b/oba/pom.xml
@@ -1,270 +1,260 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-	<groupId>de.sybig</groupId>
-	<artifactId>oba</artifactId>
-	<version>1.1</version>
-	<packaging>pom</packaging>
+    <groupId>de.sybig</groupId>
+    <artifactId>oba</artifactId>
+    <version>1.1</version>
+    <packaging>pom</packaging>
 
-	<name>oba</name>
-	<url>http://oba.sybig.de</url>
-	<description>oba (ontology based answers)</description>
+    <name>oba</name>
+    <url>http://oba.sybig.de</url>
+    <description>oba (ontology based answers)</description>
 
-	<properties>
+    <properties>
 				
-		<jersey.version>1.8-ea02</jersey.version>
-		<plugin.shade.version>1.4</plugin.shade.version>
-		<slf4j.version>1.5.8</slf4j.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<!-- the following is needed for the PMD plugin, it ignores it own config 
-			values -->
-		<targetJdk>1.6</targetJdk>
-	</properties>
-	<profiles>
-		<profile>
-			<id>prod-profile</id>
-			<build>
-				<resources>
-					<resource>
-						<directory>src/main/resources/prod </directory>
-					</resource>
-				</resources>
-			</build>
-		</profile>
-		<profile>
-			<id>ci-profile</id>
-			<build>
-				<resources>
-					<resource>
-						<directory>src/main/resources/ci</directory>
-					</resource>
-				</resources>
-			</build>
-		</profile>
-	</profiles>
+        <jersey.version>1.8-ea02</jersey.version>
+        <plugin.shade.version>1.4</plugin.shade.version>
+        <slf4j.version>1.5.8</slf4j.version>
+        <surefire.plugin.version>2.3</surefire.plugin.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!-- the following is needed for the PMD plugin, it ignores it own config
+        values -->
+        <targetJdk>1.6</targetJdk>
+    </properties>
+    <profiles>
+        <profile>
+            <id>prod-profile</id>
+            <build>
+                <resources>
+                    <resource>
+                        <directory>src/main/resources/prod </directory>
+                    </resource>
+                </resources>
+            </build>
+        </profile>
+        <profile>
+            <id>ci-profile</id>
+            <build>
+                <resources>
+                    <resource>
+                        <directory>src/main/resources/ci</directory>
+                    </resource>
+                </resources>
+            </build>
+        </profile>
+    </profiles>
 
-	<issueManagement>
-		<system>trac</system>
-		<url>https://genie.sybig.de/projects/oba/</url>
-	</issueManagement>
-	<developers>
-		<developer>
-			<id>jdo</id>
-			<name>Jürgen Dönitz</name>
-			<email>juergen.doenitz@bioinf.med.uni-goettingen.de"</email>
-			<roles>
-				<role>Project Manager</role>
-				<role>Architect</role>
-				<role>Developer</role>
-			</roles>
-			<organization>Dept. Bioinformatics UMG</organization>
-			<timezone>+1</timezone>
-		</developer>
-	</developers>
-	<scm>
-		<connection>scm:svn:https://svn.bioinf.med.uni-goettingen.de/svn/oba/tags/1.1</connection>
-		<developerConnection>scm:svn:https://svn.bioinf.med.uni-goettingen.de/svn/oba/tags/1.1</developerConnection>
-	</scm>
+    <issueManagement>
+        <system>trac</system>
+        <url>https://genie.sybig.de/projects/oba/</url>
+    </issueManagement>
+    <developers>
+        <developer>
+            <id>jdo</id>
+            <name>Jürgen Dönitz</name>
+            <email>juergen.doenitz@bioinf.med.uni-goettingen.de"</email>
+            <roles>
+                <role>Project Manager</role>
+                <role>Architect</role>
+                <role>Developer</role>
+            </roles>
+            <organization>Dept. Bioinformatics UMG</organization>
+            <timezone>+1</timezone>
+        </developer>
+    </developers>
+    <scm>
+        <connection>scm:svn:https://svn.bioinf.med.uni-goettingen.de/svn/oba/tags/1.1</connection>
+        <developerConnection>scm:svn:https://svn.bioinf.med.uni-goettingen.de/svn/oba/tags/1.1</developerConnection>
+    </scm>
 
-	<distributionManagement>
-		<site>
-			<id>maven-site</id>
-			<url>scp://localhost/var/www/maven/${project.artifactId}</url>
-		</site>
-		<snapshotRepository>
-			<uniqueVersion>false</uniqueVersion>
-			<id>sybig-snapshot</id>
-			<url>http://neidelbaum:8081/nexus/content/repositories/sybig-snapshot</url>
-		</snapshotRepository>
-		<repository>
-			<uniqueVersion>false</uniqueVersion>
-			<id>sybig-repository</id>
-			<url>http://neidelbaum:8081/nexus/content/repositories/sybig</url>
-		</repository>
-	</distributionManagement>
-
-
-
-
-	<build>
-		<plugins>
-			<plugin>
-				<!-- http://mojo.codehaus.org/buildnumber-maven-plugin/usage.html -->
-				<!-- 1.0-beta-4 isn't working -->
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>buildnumber-maven-plugin</artifactId>
-				<version>1.0-beta-3</version>
-				<executions>
-					<execution>
-						<phase>validate</phase>
-						<goals>
-							<goal>create</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<doCheck>false</doCheck>
-					<doUpdate>true</doUpdate>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.1</version>
-				<configuration>
-					<finalName>${project.artifactId}-${project.version}</finalName>
-					<archive>
-						<manifest>
-							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-						</manifest>
-						<manifestEntries>
-							<Implementation-Build>${buildNumber}</Implementation-Build>
-						</manifestEntries>
-					</archive>
-					<includes>
-						<include>src/main/java</include>
-					</includes>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>attach-sources</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.1</version>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>java</goal>
-						</goals>
-					</execution>
-				</executions>
-
-				<configuration>
-					<includeProjectDependencies>false</includeProjectDependencies>
-					<includePluginDependencies>true</includePluginDependencies>
-					<executableDependency>
-						<groupId>de.sybig</groupId>
-						<artifactId>oba-server</artifactId>
+    <distributionManagement>
+        <site>
+            <id>maven-site</id>
+            <url>scp://localhost/var/www/maven/${project.artifactId}</url>
+        </site>
+        <snapshotRepository>
+            <uniqueVersion>false</uniqueVersion>
+            <id>sybig-snapshot</id>
+            <url>http://neidelbaum:8081/nexus/content/repositories/sybig-snapshot</url>
+        </snapshotRepository>
+        <repository>
+            <uniqueVersion>false</uniqueVersion>
+            <id>sybig-repository</id>
+            <url>http://neidelbaum:8081/nexus/content/repositories/sybig</url>
+        </repository>
+    </distributionManagement>
 
 
-					</executableDependency>
-					--&gt;
-					<mainClass>de.sybig.oba.server.RestServer</mainClass>
-				</configuration>
-			</plugin>
 
-			<!-- <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>cobertura-maven-plugin</artifactId> 
-				<version>2.4</version> <configuration> <instrumentation> <ignores> <ignore>com.example.boringcode.*</ignore> 
-				</ignores> <excludes> <exclude>de/sybig/oba/**/*Test.class</exclude> </excludes> 
-				</instrumentation> <check> <branchRate>0</branchRate> <lineRate>0</lineRate> 
-				<haltOnFailure>false</haltOnFailure> <totalBranchRate>0</totalBranchRate> 
-				<totalLineRate>0</totalLineRate> <packageLineRate>0</packageLineRate> <packageBranchRate>0</packageBranchRate> 
-				<regexes> <regex> <pattern>com.example.reallyimportant.*</pattern> <branchRate>90</branchRate> 
-				<lineRate>80</lineRate> </regex> <regex> <pattern>com.example.boringcode.*</pattern> 
-				<branchRate>40</branchRate> <lineRate>30</lineRate> </regex> </regexes> </check> 
-				<formats> <format>html</format> <format>xml</format> </formats> </configuration> 
-				<executions> <execution> <goals> <goal>clean</goal> <goal>check</goal> </goals> 
-				</execution> </executions> </plugin> -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-deploy-plugin</artifactId>
-				<configuration>
-					<uniqueVersion>false</uniqueVersion>
-				</configuration>
-			</plugin>
 
-			<!-- <plugin> <artifactId>maven-assembly-plugin</artifactId> <version>2.2.1</version> 
-				<configuration> <descriptorRefs> <descriptorRef>jar-with-dependencies</descriptorRef> 
-				</descriptorRefs> </configuration> <executions> <execution> <id>make-assembly</id> 
-				<phase>package</phase> <goals> <goal>single</goal> </goals> </execution> 
-				</executions> </plugin> -->
+    <build>
+        <plugins>
+            <plugin>
+                <!-- http://mojo.codehaus.org/buildnumber-maven-plugin/usage.html -->
+                <!-- 1.0-beta-4 isn't working -->
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>buildnumber-maven-plugin</artifactId>
+                <version>1.0-beta-3</version>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>create</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <doCheck>false</doCheck>
+                    <doUpdate>true</doUpdate>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.1</version>
+                <configuration>
+                    <finalName>${project.artifactId}-${project.version}</finalName>
+                    <archive>
+                        <manifest>
+                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                        </manifest>
+                        <manifestEntries>
+                            <Implementation-Build>${buildNumber}</Implementation-Build>
+                        </manifestEntries>
+                    </archive>
+                    <includes>
+                        <include>src/main/java</include>
+                    </includes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.1</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
+                </executions>
 
-		</plugins>
-		<finalName>${project.artifactId}-${project.version}-r${buildNumber}</finalName>
-	</build>
+                <configuration>
+                    <includeProjectDependencies>false</includeProjectDependencies>
+                    <includePluginDependencies>true</includePluginDependencies>
+                    <executableDependency>
+                        <groupId>de.sybig</groupId>
+                        <artifactId>oba-server</artifactId>
 
-	<reporting>
-		<plugins>
 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>2.5</version>
-				<configuration>
-					<configLocation>${basedir}/own_checkstyle.xml</configLocation>
-				</configuration>
-			</plugin>
+                    </executableDependency>
+                    --&gt;
+                    <mainClass>de.sybig.oba.server.RestServer</mainClass>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <configuration>
+                    <uniqueVersion>false</uniqueVersion>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>$surefire.plugin.version</version>
+                <configuration>
+                    <classpathDependencyExcludes>
+                        <classpathDependencyExcludes>ch.qos.logback:logback-classic</classpathDependencyExcludes>
+                    </classpathDependencyExcludes>
+                </configuration>
+            </plugin>
+        </plugins>
+        <finalName>${project.artifactId}-${project.version}-r${buildNumber}</finalName>
+    </build>
 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-pmd-plugin</artifactId>
-				<version>2.5</version>
-				<configuration>
-					<configuration>
-						<targetJdk>1.6</targetJdk>
-					</configuration>
-				</configuration>
-			</plugin>
+    <reporting>
+        <plugins>
 
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>findbugs-maven-plugin</artifactId>
-				<version>2.0.1</version>
-			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>2.5</version>
+                <configuration>
+                    <configLocation>${basedir}/own_checkstyle.xml</configLocation>
+                </configuration>
+            </plugin>
 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jxr-plugin</artifactId>
-				<version>2.2</version>
-			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-pmd-plugin</artifactId>
+                <version>2.5</version>
+                <configuration>
+                    <configuration>
+                        <targetJdk>1.6</targetJdk>
+                    </configuration>
+                </configuration>
+            </plugin>
 
-			<plugin>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.3</version>
-			</plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>findbugs-maven-plugin</artifactId>
+                <version>2.0.1</version>
+            </plugin>
 
-		</plugins>
-	</reporting>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jxr-plugin</artifactId>
+                <version>2.2</version>
+            </plugin>
 
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.0</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>${slf4j.version}</version>
-		</dependency>
-	</dependencies>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>$surefire.plugin.version</version>
+            </plugin>
 
-	<modules>
-		<module>../oba-server</module>
-		<module>../oba-common</module>
-		<module>../oba-client</module>
-		<module>../oba-cytomer</module>
-	 <module>../oba-go</module>
-	</modules>
+        </plugins>
+    </reporting>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+    </dependencies>
+
+    <modules>
+        <module>../oba-server</module>
+        <module>../oba-common</module>
+        <module>../oba-client</module>
+        <module>../oba-cytomer</module>
+        <module>../oba-go</module>
+    </modules>
 </project>
