Added tests to get subsets of TrOn.

--- a/oba-tribolium/src/test/resources/triboliumTest.properties
+++ b/oba-tribolium/src/test/resources/triboliumTest.properties
@@ -1,2 +1,2 @@
-tribolium_ns=http://purl.org/obo/owlapi/tribolium.anatomy
+tribolium_ns=http://purl.org/obo/owlapi/tribolium.anatomy.test
 dev_stages_id=TrOnT_0000001
