Refactor handling of ontologies for the alignment.
* Add new class to represent the result ontology.
* Adjusted the pom for the new ontology loader class.
* Fix a bug, that stopped the loading of all plugins after the first error.

--- a/oba-alignment/pom.xml
+++ b/oba-alignment/pom.xml
@@ -54,7 +54,7 @@
                         </manifest>
                         <manifestEntries>
                             <plugin-name>alignment</plugin-name>
-                            <ontology-loader-class>de.sybig.oba.server.alignment.VirtualOntology</ontology-loader-class>
+                            <ontology-loader-class>de.sybig.oba.server.alignment.AlignmentOntologyLoader</ontology-loader-class>
                         </manifestEntries>
                     </archive>
                 </configuration>
