Started to add functions to inspect the alignment scores.

--- a/oba-alignment/pom.xml
+++ b/oba-alignment/pom.xml
@@ -64,6 +64,7 @@
                         <manifestEntries>
                             <plugin-name>alignment</plugin-name>
                             <ontology-loader-class>de.sybig.oba.server.alignment.AlignmentOntologyLoader</ontology-loader-class>
+                            <function-main-class>de.sybig.oba.server.inspect.OntoFunctions</function-main-class>
                         </manifestEntries>
                     </archive>
                 </configuration>
