Add a HTML marshaller for the table with the scores of the alignment.

--- a/oba-alignment/pom.xml
+++ b/oba-alignment/pom.xml
@@ -64,8 +64,8 @@
                         <manifestEntries>
                             <plugin-name>alignment</plugin-name>
                             <ontology-loader-class>de.sybig.oba.server.alignment.AlignmentOntologyLoader</ontology-loader-class>
-                            <function-main-class>de.sybig.oba.server.inspect.OntoFunctions</function-main-class>
-                            <provider-classes>de.sybig.oba.server.inspect.TextMarshaller</provider-classes>
+                            <function-main-class>de.sybig.oba.server.alignment.inspect.OntoFunctions</function-main-class>
+                            <provider-classes>de.sybig.oba.server.alignment.inspect.TextMarshaller:de.sybig.oba.server.alignment.inspect.HtmlMarshaller</provider-classes>
                         </manifestEntries>
                     </archive>
                 </configuration>
