--- a/pom.xml
+++ b/pom.xml
@@ -256,6 +256,7 @@
         <module>oba-cytomer</module>
         <module>oba-tribolium</module>
         <module>oba-go</module>
+		<module>oba-tfclass</module>
 	<module>oba-alignment</module>
     </modules>
 </project>
