Adapt test because special chars are now removed during the search.

--- a/oba-tribolium/pom.xml
+++ b/oba-tribolium/pom.xml
@@ -89,5 +89,10 @@
             <version>1.4-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <artifactId>junit</artifactId>
+            <groupId>junit</groupId>
+            <version>4.11</version>
+        </dependency>
     </dependencies>
 </project>
