--- a/oba-alignment/pom.xml
+++ b/oba-alignment/pom.xml
@@ -86,6 +86,11 @@
             <version>1.4-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>info.debatty</groupId>
+            <artifactId>java-string-similarity</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 </project>
 
