Made oba-information-content a maven module, clean up.

--- a/pom.xml
+++ b/pom.xml
@@ -257,6 +257,7 @@
         <module>oba-tribolium</module>
         <module>oba-go</module>
 		<module>oba-tfclass</module>
-	<module>oba-alignment</module>
+		<module>oba-alignment</module>
+		<module>oba-information-content</module>
     </modules>
 </project>
